# cs100

./: 1-1.c  1-2  1-3  1-3.c  README.md
1-1.dSYM/Contents/Resources/DWARF/: 1-1
1-2.dSYM/Contents/Resources/DWARF/: 1-2
2022/3-thread/7-3_Classic/: 7-3.tar  CMakeLists.txt  generate.py  kmeans.cpp  kmeans.hpp  main.cpp  visualize.py
2022/3-thread/hw7_templates/7-1/: CMakeCache.txt  CMakeLists.txt  rational.cpp  tests.cpp
2022/3-thread/hw7_templates/7-2/: CMakeLists.txt  demo.cpp  matrix.cpp  matrix.hpp  rational.cpp  rational.hpp
2022/3-thread/hw7_templates/7-3/: CMakeLists.txt  generate.py  kmeans - 副本.cpp  kmeans - 副本.hpp  kmeans.cpp  kmeans.hpp  kmeanscopy.cpp  main.cpp  run.ps1  test.cpp
2022/3-thread/hw7_templates/7-3/Build - 副本/: CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  kmeans.sln
2022/3-thread/hw7_templates/7-3/Build - 副本/main.dir/Debug/: main.exe.recipe  main.ilk
2022/3-thread/hw7_templates/7-3/Build - 副本/main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CustomBuild.command.1.tlog
2022/3-thread/hw7_templates/7-3/Build - 副本/static_lib.dir/Debug/static_lib.tlog/: CustomBuild.read.1.tlog  static_lib.lastbuildstate
2022/3-thread/hw7_templates/7-3/Build - 副本/static_lib.dir/MinSizeRel/static_lib.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  static_lib.lastbuildstate
2022/3-thread/hw7_templates/7-3/Build - 副本/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
2022/3-thread/hw7_templates/7-3/Build - 副本/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog
2022/3-thread/hw7_templates/7-3/Build - 副本/x64/MinSizeRel/ZERO_CHECK/: ZERO_CHECK.recipe
2022/3-thread/hw7_templates/7-3/Build - 副本/x64/MinSizeRel/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog
2022/3-thread/hw8_templates/: CMakeLists.txt
2022/3-thread/hw8_templates/8-1/: CMakeLists.txt  test_polynomials.cpp
2022/3-thread/hw8_templates/8-2/: CMakeLists.txt  functional_forms.hpp  poly.hpp
2022/3-thread/hw8_templates/test/: test_polynomials.cpp
2022/CS100-HW89/: CMakeLists.txt  CMakeLists1.txt
2022/CS100-HW89/src/PartForYou/: GameObjects.cpp  GameObjects.h  GameWorld.cpp  GameWorld.h  Goodie.cpp  Goodie.h  Projectile.cpp  Projectile.h  Scenery.cpp  Scenery.h  Spaceship.cpp  Spaceship.h
2022/CS100-hw5/: 5-1.cpp  5-2.cpp  5-3.cpp
2022/CS100-hw6/: 6-1.cpp  6-2.cpp  6-3.cpp
2023/HW1/: 1-1  1-1.c
2023/HW1/1-1.dSYM/Contents/Resources/DWARF/: 1-1
2023/check/: a.in  ans.txt  check.cpp  generator.cpp  std.c  test.c
2023/hw2/: 2-1.c  2-2.c  2-3  2-3.c  2-4.c  2-5.c  a.in  a.out  tempCodeRunnerFile
2023/hw2/2-3.dSYM/Contents/Resources/DWARF/: 2-3
2023/hw3/: 3-1.c  3-2.c  3-3.c  3-4.c  3-5.c  a.in  bonus.c
2023/hw4/: 4-1.c  4-2.c  4-2.h  tempCodeRunnerFile.c
2023/hw4/prob2/attachments/testcases/: fhq_treap.c
2023/hw4/prob3/attachments/: ibf copy.c  ibf.c
2023/hw5/: prob2.cpp  tempCodeRunnerFile.cpp
2023/hw5/hw5_prob3/attachments/: dynarray.hpp  example.cpp
2023/hw6/hw6_prob2/attachments/: dynarray.hpp
2023/hw6/hw6_prob3/: LifeRule.cpp  LifeRule.h  a.out
2023/hw7/prob2/: dynarray.cpp  dynarray.hpp
2023/hw7/prob3/attachments/: polynomial.cpp  polynomial.hpp
2023/hw8/: CMakeLists.txt
2023/hw8/src/: utils.hpp
2023/hw8/src/Background/: Background.cpp  Background.hpp  CMakeLists.txt
2023/hw8/src/GameObject/: GameObject.cpp  GameObject.hpp
2023/hw8/src/GameWorld/: CMakeLists.txt  GameWorld.cpp  GameWorld.hpp
2023/hw8/src/Plant/: CMakeLists.txt  Plant.cpp  Plant.hpp
2023/hw8/src/Seed/: CMakeLists.txt  Seed.cpp  Seed.hpp
2023/hw8/src/Zombie/: CMakeLists.txt  Zombie.cpp  Zombie.hpp
HW1/: 1-1  1-1.c  1-2.c
